Inconsistent nullable behavior for request parameters basic type vs complex type (#323)

--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
@@ -63,7 +63,6 @@ paths:
                 type: array
                 items:
                   $ref: '../base/product-base.yml#/components/schemas/Product'
-                minItems: 0
           headers:
             Cache-Control:
               schema:
@@ -148,6 +147,7 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
             minLength: 1
             default: 4711
             examples:
@@ -184,12 +184,14 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
             minLength: 1
         - name: lang
           in: header
           required: true
           schema:
             type: string
+            nullable: false
             examples:
              - en
         - name: reseller
@@ -198,17 +200,20 @@ paths:
           schema:
             type: integer
             format: int64
+            nullable: false
         - name: id
           in: path
           required: true
           schema:
             type: integer
             format: int64
+            nullable: false
         - name: q1
           in: query
           required: true
           schema:
             type: string
+            nullable: false
         - name: intCode
           in: header
           schema:
@@ -326,12 +331,14 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
             minLength: 1
         - name: lang
           in: header
           required: true
           schema:
             type: string
+            nullable: false
             examples:
              - en
         - name: reseller
@@ -340,11 +347,13 @@ paths:
           schema:
             type: integer
             format: int64
+            nullable: false
         - name: q1
           in: query
           required: true
           schema:
             type: string
+            nullable: false
       responses:
         '201':
           description: >-
@@ -375,17 +384,20 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
         - name: lang
           in: header
           required: true
           schema:
             type: string
+            nullable: false
         - name: q2
           in: query
           required: true
           deprecated: true
           schema:
             type: string
+            nullable: false
       responses:
         '202':
           description: >-
@@ -409,6 +421,7 @@ paths:
           schema:
             type: integer
             format: int32
+            nullable: false
       responses:
         '201':
           description: >-
@@ -522,12 +535,14 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
             minLength: 1
         - name: lang
           in: header
           required: true
           schema:
             type: string
+            nullable: false
             examples:
              - en
         - name: reseller
@@ -536,17 +551,20 @@ paths:
           schema:
             type: integer
             format: int64
+            nullable: false
         - name: id
           in: path
           required: true
           schema:
             type: integer
             format: int64
+            nullable: false
         - name: q1
           in: query
           required: true
           schema:
             type: string
+            nullable: false
         - name: intCode
           in: header
           schema:
@@ -556,6 +574,7 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
         - name: deprecatedHeader
           in: header
           required: true
@@ -896,7 +915,6 @@ paths:
                 type: array
                 items:
                   $ref: '../base/product-base.yml#/components/schemas/Channel'
-                minItems: 0
           headers:
             X-Global-Response-Header:
               schema:
@@ -1039,66 +1057,77 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
         - name: startTimestamp
           in: query
           required: true
           schema:
             type: string
             format: date-time
+            nullable: false
         - name: startTime
           in: query
           required: true
           schema:
             type: string
             format: time
+            nullable: false
         - name: localStartTimestamp
           in: query
           required: true
           schema:
             type: string
             format: date-time
+            nullable: false
         - name: localStartTime
           in: query
           required: true
           schema:
             type: string
             format: time
+            nullable: false
         - name: localStartDate
           in: query
           required: true
           schema:
             type: string
             format: date
+            nullable: false
         - name: calendar
           in: query
           required: true
           schema:
             type: string
             format: date-time
+            nullable: false
         - name: utilDate
           in: query
           required: true
           schema:
             type: string
             format: date-time
+            nullable: false
         - name: sqlTimestamp
           in: query
           required: true
           schema:
             type: string
             format: date-time
+            nullable: false
         - name: sqlTime
           in: query
           required: true
           schema:
             type: string
             format: time
+            nullable: false
         - name: sqlDate
           in: query
           required: true
           schema:
             type: string
             format: date
+            nullable: false
       responses:
         '202':
           description: >-
@@ -1121,12 +1150,14 @@ paths:
           schema:
             type: string
             format: date-time
+            nullable: false
         - name: offsetTime
           in: query
           required: true
           schema:
             type: string
             format: time
+            nullable: false
         - name: localDateTime
           in: query
           description: >-
@@ -1137,53 +1168,62 @@ paths:
           schema:
             type: string
             format: date-time
+            nullable: false
         - name: localTime
           in: query
           required: true
           schema:
             type: string
             format: time
+            nullable: false
         - name: localDate
           in: query
           required: true
           schema:
             type: string
             format: date
+            nullable: false
         - name: utilDate
           in: query
           required: true
           schema:
             type: string
             format: date-time
+            nullable: false
         - name: calendar
           in: query
           required: true
           schema:
             type: string
             format: date-time
+            nullable: false
         - name: sqlTimestamp
           in: query
           required: true
           schema:
             type: string
             format: date-time
+            nullable: false
         - name: sqlTime
           in: query
           required: true
           schema:
             type: string
             format: time
+            nullable: false
         - name: sqlDate
           in: query
           required: true
           schema:
             type: string
             format: date
+            nullable: false
         - name: path
           in: path
           required: true
           schema:
             type: string
+            nullable: false
       responses:
         '202':
           description: >-
@@ -1240,16 +1280,19 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
         - name: content-type
           in: header
           required: true
           schema:
             type: string
+            nullable: false
         - name: ACCEPT
           in: header
           required: true
           schema:
             type: string
+            nullable: false
       responses:
         '202':
           description: >-
@@ -1271,11 +1314,13 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
         - name: Authentication
           in: header
           required: true
           schema:
             type: string
+            nullable: false
       responses:
         '201':
           description: >-
@@ -1306,11 +1351,13 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
         - name: Authentication
           in: header
           required: true
           schema:
             type: string
+            nullable: false
       responses:
         '201':
           description: >-
@@ -1520,6 +1567,7 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
             minLength: 32
             maxLength: 64
         - name: longValues
@@ -1599,6 +1647,7 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
             minLength: 32
             maxLength: 64
         - name: longValues
@@ -1617,6 +1666,7 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
       responses:
         '202':
           description: >-
@@ -1638,6 +1688,7 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
       responses:
         '202':
           description: >-
@@ -1727,6 +1778,7 @@ paths:
           schema:
             type: integer
             format: int32
+            nullable: false
             minimum: 32
       responses:
         '202':
@@ -1749,12 +1801,14 @@ paths:
           required: true
           schema:
             type: string
+            nullable: false
             minLength: 1
         - name: lang
           in: header
           required: true
           schema:
             type: string
+            nullable: false
             examples:
              - en
         - name: reseller
@@ -1763,17 +1817,20 @@ paths:
           schema:
             type: integer
             format: int64
+            nullable: false
         - name: id
           in: path
           required: true
           schema:
             type: integer
             format: int64
+            nullable: false
         - name: q1
           in: query
           required: true
           schema:
             type: string
+            nullable: false
         - name: intCode
           in: header
           schema:
@@ -1917,6 +1974,7 @@ components:
       in: header
       schema:
         type: string
+        nullable: false
       required: true
 
     # com.anaptecs.jeaf.junit.openapi.service1.ChildBeanParameterType.childProperty
@@ -1925,6 +1983,7 @@ components:
       in: header
       schema:
         type: string
+        nullable: false
       required: true
 
     # com.anaptecs.jeaf.junit.openapi.service1.LocalBeanParamType.localID
@@ -1933,6 +1992,7 @@ components:
       in: header
       schema:
         type: string
+        nullable: false
       required: true
 
     # com.anaptecs.jeaf.junit.openapi.service1.LocalBeanParamType.localKey
@@ -1941,6 +2001,7 @@ components:
       in: header
       schema:
         type: string
+        nullable: false
       required: true
 
   responses:
