--- a/jeaf-generator-test-open-api/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/base/product-base.yml
@@ -1259,6 +1259,7 @@ components:
         aByteArray:
           type: string
           format: byte
+          maxLength: 32768
           nullable: true
         bByteArray:
           type: string
