--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
@@ -391,6 +391,10 @@ paths:
           schema:
             type: string
             nullable: false
+            examples:
+             - DE-de
+               2nd line
+             - en
         - name: q2
           in: query
           required: true
