--- a/jeaf-generator-test-spring-boot3/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-spring-boot3/src-gen/main/resources/products/product-services.yml
@@ -484,6 +484,11 @@ paths:
     
   /products/specific/{id}:
     patch:
+      summary: |
+        Load
+        specific things
+        from multiple
+        lines
       operationId: loadSpecificThings
       parameters:
         - name: token
