--- a/jeaf-generator-test-spring-boot3/pom.xml
+++ b/jeaf-generator-test-spring-boot3/pom.xml
@@ -101,6 +101,7 @@
 					<generateEqualsAndHashCode>true</generateEqualsAndHashCode>
 					<implementCompareableForOpenAPIDataTypes>true</implementCompareableForOpenAPIDataTypes>
 					<enableDetailedToStringMethod>true</enableDetailedToStringMethod>
+					<generateImmutableClasses>true</generateImmutableClasses>
 					
 					<generateOfOperation>true</generateOfOperation>
 					<generateValueOfForOpenAPIDataTypes>false</generateValueOfForOpenAPIDataTypes>
