--- a/jeaf-generator/.settings/org.eclipse.core.resources.prefs
+++ b/jeaf-generator/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
-#Thu May 05 08:56:52 CEST 2022
 eclipse.preferences.version=1
+encoding//src/main/java=UTF-8
+encoding//src/main/resources=UTF-8
+encoding//src/test/java=UTF-8
 encoding/<project>=UTF-8
