--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
@@ -848,6 +848,17 @@ components:
           type: string
           nullable: false
 
+    # com.anaptecs.jeaf.junit.generics.Message
+    Message:
+      type: object
+      additionalProperties: false
+      required:
+        - text
+      properties:
+        text:
+          type: string
+          nullable: false
+
     # com.anaptecs.jeaf.junit.openapi.base.MoneyAmount
     MoneyAmount:
       type: object
@@ -876,6 +887,18 @@ components:
           maxLength: 3
           examples:
            - CHF
+          nullable: false
+
+    # com.anaptecs.jeaf.junit.generics.MyBusinessObject
+    MyBusinessObject:
+      type: object
+      additionalProperties: false
+      required:
+        - myBusinessAttribute
+      properties:
+        myBusinessAttribute:
+          type: integer
+          format: int32
           nullable: false
 
     # com.anaptecs.jeaf.junit.openapi.base.MyFirstResponse
@@ -1866,6 +1889,14 @@ components:
         techAttribute:
           type: string
           nullable: false
+
+    # com.anaptecs.jeaf.junit.generics.TemplateEnumTest
+    TemplateEnumTest:
+      type: string
+      enum:
+        - ONE
+        - TWO
+        - THREE
 
     # com.anaptecs.jeaf.junit.openapi.base.TimeUnit
     TimeUnit:
