--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,10 @@
 		<log4j-to-slf4j.version>2.24.3</log4j-to-slf4j.version>
 		<equalsverifier.version>3.18.1</equalsverifier.version>
 		<flexmark.version>0.64.8</flexmark.version>
+		
+		<java.source.version>11</java.source.version>
+		<java.target.version>11</java.target.version>
+		
 	</properties>
 
 	<modules>
