Feature/379 invalid openapi spec in case of multiple template parameters within one type (#380)
* Prepared fix

* Prepared test

* Fixed #379

--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
@@ -189,6 +189,23 @@ components:
       format: double
       nullable: false
 
+    # com.anaptecs.jeaf.junit.generics.AndOneMorePOJO
+    AndOneMorePOJO:
+      type: object
+      additionalProperties: false
+      required:
+        - genericProperty
+        - multiTemplateClassImpl
+      properties:
+        genericProperty:
+          $ref: '#/components/schemas/DoSomethingResponse'
+        genericResponses:
+          type: array
+          items:
+            $ref: '#/components/schemas/DoSomethingResponse'
+        multiTemplateClassImpl:
+          $ref: '#/components/schemas/MultiTemplateClassImpl'
+
     # com.anaptecs.jeaf.junit.openapi.base.BankAccount
     BankAccount:
       type: object
@@ -681,6 +698,24 @@ components:
               - "null"
           deprecated: true
 
+    # com.anaptecs.jeaf.junit.generics.DoSomethingResponse
+    DoSomethingResponse:
+      type: object
+      additionalProperties: false
+      required:
+        - value
+      properties:
+        errors:
+          type: array
+          items:
+            $ref: '#/components/schemas/Message'
+        warnings:
+          type: array
+          items:
+            $ref: '#/components/schemas/Message'
+        value:
+          $ref: '#/components/schemas/MyBusinessObject'
+
     # com.anaptecs.jeaf.junit.openapi.base.Duration
     Duration:
       type: object
@@ -848,6 +883,17 @@ components:
           type: string
           nullable: false
 
+    # com.anaptecs.jeaf.junit.generics.Message
+    Message:
+      type: object
+      additionalProperties: false
+      required:
+        - text
+      properties:
+        text:
+          type: string
+          nullable: false
+
     # com.anaptecs.jeaf.junit.openapi.base.MoneyAmount
     MoneyAmount:
       type: object
@@ -876,6 +922,33 @@ components:
           maxLength: 3
           examples:
            - CHF
+          nullable: false
+
+    # com.anaptecs.jeaf.junit.generics.MultiTemplateClassImpl
+    MultiTemplateClassImpl:
+      type: object
+      additionalProperties: false
+      required:
+        - object
+        - newState
+      properties:
+        object:
+          $ref: '#/components/schemas/Message'
+        previousState:
+          $ref: '#/components/schemas/TemplateEnumTest'
+        newState:
+          $ref: '#/components/schemas/TemplateEnumTest'
+
+    # com.anaptecs.jeaf.junit.generics.MyBusinessObject
+    MyBusinessObject:
+      type: object
+      additionalProperties: false
+      required:
+        - myBusinessAttribute
+      properties:
+        myBusinessAttribute:
+          type: integer
+          format: int32
           nullable: false
 
     # com.anaptecs.jeaf.junit.openapi.base.MyFirstResponse
@@ -1866,6 +1939,14 @@ components:
         techAttribute:
           type: string
           nullable: false
+
+    # com.anaptecs.jeaf.junit.generics.TemplateEnumTest
+    TemplateEnumTest:
+      type: string
+      enum:
+        - ONE
+        - TWO
+        - THREE
 
     # com.anaptecs.jeaf.junit.openapi.base.TimeUnit
     TimeUnit:
