--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
 		<jeaf.validation.impl.version>1.8.0</jeaf.validation.impl.version>
 		<jeaf.rest.api.version>2.0.0-RC1</jeaf.rest.api.version>
 		<jeaf.rest.impl.version>2.0.0-RC1</jeaf.rest.impl.version>
-		<jeaf.test.model.version>2.4.2</jeaf.test.model.version>
+		<jeaf.test.model.version>2.4.3-SNAPSHOT</jeaf.test.model.version>
 		<jeaf.generator.messages.version>1.17.0</jeaf.generator.messages.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
@@ -60,6 +60,10 @@
 		<log4j-to-slf4j.version>2.24.3</log4j-to-slf4j.version>
 		<equalsverifier.version>3.18.1</equalsverifier.version>
 		<flexmark.version>0.64.8</flexmark.version>
+		
+		<java.source.version>11</java.source.version>
+		<java.target.version>11</java.target.version>
+		
 	</properties>
 
 	<modules>
