Fix another bug with multiple template parameters

--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
@@ -205,6 +205,10 @@ components:
             $ref: '#/components/schemas/DoSomethingResponse'
         multiTemplateClassImpl:
           $ref: '#/components/schemas/MultiTemplateClassImpl'
+        many:
+          type: array
+          items:
+            $ref: '#/components/schemas/MultiTemplateClassImpl'
 
     # com.anaptecs.jeaf.junit.openapi.base.BankAccount
     BankAccount:
