--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf</groupId>
 		<artifactId>jeaf-plugin-project-parent</artifactId>
-		<version>1.8.12-SNAPSHOT</version>
+		<version>1.8.12</version>
 	</parent>
 
 	<groupId>com.anaptecs.jeaf.generator</groupId>
