--- a/jeaf-generator-test-activities-impl/pom.xml
+++ b/jeaf-generator-test-activities-impl/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.24.5</version>
+		<version>1.24.6-SNAPSHOT</version>
 	</parent>
 
 	<name>JEAF Generator Test Activities Impl</name>
