--- a/pom.xml
+++ b/pom.xml
@@ -49,11 +49,12 @@
 		<jeaf.generator.messages.version>1.18.0</jeaf.generator.messages.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
-		<spring.boot.version>2.7.17</spring.boot.version>
-		<spring.core.version>5.3.29</spring.core.version>
-		<spring.security.version>5.7.10</spring.security.version>
+		<spring.boot.version>3.4.3</spring.boot.version>
+		<spring.core.version>6.2.3</spring.core.version>
+		<spring.security.version>6.4.3</spring.security.version>
 		<jakartaee-api.version>10.0.0</jakartaee-api.version>
 		<reactor-core.version>3.7.3</reactor-core.version>
+		<jersey.version>2.35</jersey.version>
 		
 		<javaparser-core.version>3.26.3</javaparser-core.version>
 		<swagger-parser.version>2.1.25</swagger-parser.version>
@@ -114,5 +115,19 @@
 		<module>jeaf-generator-test-spring-rest-proxy-reactive</module>
 		<module>jeaf-generator-test-error-handling</module>
 	</modules>
+	
+	<profiles>
+		<profile>
+			<id>active-on-jdk-11</id>
+			<activation>
+				<jdk>11</jdk>
+			</activation>
+			<properties>
+				<spring.boot.version>2.7.17</spring.boot.version>
+				<spring.core.version>5.3.29</spring.core.version>
+				<spring.security.version>5.7.10</spring.security.version>
+			</properties>
+		</profile>
+	</profiles>
 
 </project>
