--- a/pom.xml
+++ b/pom.xml
@@ -53,8 +53,9 @@
 		<spring.core.version>6.2.3</spring.core.version>
 		<spring.security.version>6.4.3</spring.security.version>
 		<jakartaee-api.version>10.0.0</jakartaee-api.version>
+		<jakarta.ws.version>3.1.0</jakarta.ws.version>
 		<reactor-core.version>3.7.4</reactor-core.version>
-		<jersey.version>2.35</jersey.version>
+		<jersey.version>3.1.10</jersey.version>
 		
 		<javaparser-core.version>3.26.3</javaparser-core.version>
 		<swagger-parser.version>2.1.25</swagger-parser.version>
