--- a/jeaf-generator-test-custom-extension-usage/pom.xml
+++ b/jeaf-generator-test-custom-extension-usage/pom.xml
@@ -94,6 +94,7 @@
 					<validateOpenAPISpec>true</validateOpenAPISpec>
 					<addIgnoredHeadersToOpenAPISpec>true</addIgnoredHeadersToOpenAPISpec>
 					<openAPICommentStyle>&gt;-</openAPICommentStyle>
+					<openAPILiteralQuotationCharacter>'</openAPILiteralQuotationCharacter>
 					<restDefaultSuccessStatusCode>201</restDefaultSuccessStatusCode>
 					<restDefaultVoidStatusCode>202</restDefaultVoidStatusCode>
 
